--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=ESP Async WebServer
-version=1.2.3
+name=ESPAsyncWebServer
+version=2.0.0
 author=Me-No-Dev
-maintainer=lorol
+maintainer=forkineye
 sentence=Async Web Server for ESP8266 and ESP31B
 paragraph=Async Web Server for ESP8266 and ESP31B
 category=Other
-url=https://github.com/lorol/ESPAsyncWebServer
+url=https://github.com/forkineye/ESPAsyncWebServer
 architectures=*
